--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -43,6 +43,11 @@ body {
       top: 50vh;
       left: 60%;
     }
+    .ob4 {
+      position: absolute;
+      top: 35vh;
+      right: -10%;
+    }
   }
   &.slide-2 {
     .pani {
@@ -65,6 +70,15 @@ body {
     .t1 {
       margin-top: 5vh;
     }
+    .ob-group {
+      position: absolute;
+      left: 70%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      z-index: 10;
+    }
   }
 }
 
@@ -80,6 +94,9 @@ body {
   &.ob-md {
     @include ob(18vh);
   }
+  &.ob-sm2 {
+    @include ob(14vh);
+  }
 }
 .title-label {
   padding: 5px 15px;
@@ -93,8 +110,11 @@ body {
     background-color: #fff;
     text-transform: uppercase;
     z-index: 10;
-    &.sm {
-      font-size: 28px;
-    }
+  }
+  &.md > h1 {
+    font-size: 40px;
+  }
+  &.sm > h1 {
+    font-size: 28px;
   }
 }
