--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -1,11 +1,15 @@
-body {
-  background-color: #D7D7D7;
-}
+$bg-gray: #D7D7D7;
+$accent: #FF5722;
+
 @mixin ob($size) {
   height: $size;
   width: $size;
 }
 
+
+body {
+  background-color: $bg-gray;
+}
 .container, .container-fluid {
   position: relative;
 }
@@ -29,22 +33,21 @@ body {
     .t2 {
       margin-top: 20vh;
     }
-    .ob1 {
+    .ob {
       position: absolute;
+    }
+    .ob1 {
       left: 40%;
       top: 30px;
     }
     .ob2 {
-      position: absolute;
       left: 80%;
     }
     .ob3 {
-      position: absolute;
       top: 50vh;
       left: 60%;
     }
     .ob4 {
-      position: absolute;
       top: 35vh;
       right: -10%;
     }
@@ -67,8 +70,16 @@ body {
       width: 66vw;
       background: no-repeat center/cover url('/assets/tlo.png');
     }
+    .wyslij-email {
+      position: absolute;
+      left: 10vw;
+      top: 70vh;
+    }
     .t1 {
       margin-top: 5vh;
+    }
+    .t2 {
+      margin-top: 10vh;
     }
     .ob-group {
       position: absolute;
@@ -80,10 +91,34 @@ body {
       z-index: 10;
     }
   }
+  &.zagrozenia {
+    .card {
+      text-transform: uppercase;
+      height: 25rem;
+      .card-body {
+        display: flex;
+        align-items: center;
+        .card-title {
+          font: 800 2rem/2 'Muli', sans-serif;
+        }
+      }
+    }
+    .obrazek {
+      background-position: center center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      height: 100%;
+      &.z1 { background-image: url('/assets/zagrozenia_1.jpg') }
+      &.z2 { background-image: url('/assets/zagrozenia_2.jpg') }
+      &.z3 { background-image: url('/assets/zagrozenia_3.jpg') }
+      &.z4 { background-image: url('/assets/zagrozenia_4.jpg') }
+      &.z5 { background-image: url('/assets/zagrozenia_5.jpg') }
+    }
+  }
 }
 
 .ob {
-  background-color: #FF5722;
+  background-color: $accent;
   border-radius: 50%;
   &.ob-xl {
     @include ob(35vh);
@@ -99,22 +134,34 @@ body {
   }
 }
 .title-label {
-  padding: 5px 15px;
   > h1 {
     display: inline-block;
     font-family: 'Muli', sans-serif;
     font-weight: 800;
-    font-size: 55px;
+    font-size: 2.5rem;
     margin: 0;
-    padding: 5px 15px;
+    padding: 0.4rem 1rem;
     background-color: #fff;
     text-transform: uppercase;
     z-index: 10;
   }
   &.md > h1 {
-    font-size: 40px;
+    font-size: 2rem;
   }
   &.sm > h1 {
-    font-size: 28px;
+    font-size: 1.5rem;
+  }
+  &.pull-10 {
+    margin-left: -100px;
+  }
+}
+.card {
+  width: 100%;
+  border-radius: 0;
+  .card-body {
+    padding: 1.25rem 3rem;
+    .card-text {
+      font: 1.3rem 'Open Sans', sans-serif;
+    }
   }
 }
