--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -91,8 +91,27 @@ body {
       z-index: 10;
     }
   }
+  &.slide-4 {
+    background: no-repeat center/cover url('/assets/ziemia.png');
+    .okowizjer {
+      position: absolute;
+      right: 5%;
+      height: 50%;
+      width: 20%;
+      top: 15%;
+      background: no-repeat center/contain url('/assets/okowizjer.png');
+    }
+    .title-label {
+      position: absolute;
+      right: 25%;
+      top: 20%;
+    }
+  }
+  &.slide-5 {
+    background-color: #fff;
+  }
 }
-.zagrozenia {
+.slide-3 {
   .card {
     text-transform: uppercase;
     height: 25rem;
@@ -116,6 +135,11 @@ body {
     &.z5 { background-image: url('/assets/zagrozenia_5.jpg') }
   }
 }
+footer {
+  background-color: #5E5E5E;
+  color: #F4F3F0;
+  padding: 10rem;
+}
 .ob {
   background-color: $accent;
   border-radius: 50%;
@@ -137,7 +161,7 @@ body {
     display: inline-block;
     font-family: 'Muli', sans-serif;
     font-weight: 800;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin: 0;
     padding: 0.4rem 1rem;
     background-color: #fff;
@@ -145,10 +169,10 @@ body {
     z-index: 10;
   }
   &.md > h1 {
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
   &.sm > h1 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
   }
   &.pull-10 {
     margin-left: -100px;
