Overlay and js logic changes

--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -310,6 +310,9 @@ footer {
       font: 1.3rem 'Open Sans', sans-serif;
     }
   }
+  .overlay-content {
+    display: none;
+  }
 }
 .overlay {
   display: none;
