--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -2,6 +2,7 @@ $bg-gray: #D7D7D7;
 $accent: #FF5722;
 $orange: #ff5722;
 $main-text: #5e5e5e;
+$breakpoint-xs: 350px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 1040px;
 
@@ -99,14 +100,14 @@ body {
     }
     .wyslij-email {
       position: absolute;
-      left: 10vw;
-      top: 70vh;
+      left: 10%;
+      bottom: 35%;
     }
     .t1 {
       margin-top: 5vh;
     }
     .t2 {
-      margin-top: 10vh;
+      margin-top: 5vh;
     }
     .ob-group {
       position: absolute;
@@ -153,20 +154,28 @@ body {
     }
     .title-label {
       position: absolute;
-      right: 25%;
-      top: 20%;
-      @media screen and (max-width: $breakpoint-sm) {
-        left: 2rem;
-        right: initial;
+      &.pulled {
+        right: 25%;
+        top: 30%;
+        @media screen and (max-width: $breakpoint-sm) {
+          left: 10%;
+          right: initial;
+        }
+      }
+      &.t1 {
+        left: 10%;
+        top: 10%;
       }
     }
     .card {
       width: initial;
       display: inline-block;
       position: relative;
+      margin: 2rem 0;
       .card-body {
         .card-text {
           z-index: 30;
+          font-size: 1.5rem;
           position: relative;
         }
       }
@@ -183,6 +192,7 @@ body {
         flex-direction: column;
         flex-wrap: nowrap;
         padding: 0 2rem;
+
       }
     }
     .ob {
@@ -192,6 +202,7 @@ body {
     }
   }
   &.slide-5 {
+    height: 70vh;
     background-color: #fff;
     padding-top: 7rem;
     h1 {
@@ -199,16 +210,29 @@ body {
       text-transform: uppercase;
     }
     a, a:visited, a:hover {
-      text-decoration: none;
-      color: #2A2A2A
+      color: #2A2A2A;
+      @media screen and (max-width: $breakpoint-sm) {
+        text-decoration: underline;
+      }
     }
     p {
-      font: 300 1.5rem 'Open Sans', sans-serif;
+      font: 300 1.5rem 'Muli', sans-serif;
       text-transform: uppercase;
+      strong {
+        font-weight: 800;
+      }
+    }
+    img {
+      width: 100%;
     }
   }
 }
 a, a:visited {
+  &.wyslijemail {
+    h1 {
+      text-decoration: underline;
+    }
+  }
   h1, h2 {
     color: #000;
   }
@@ -230,17 +254,21 @@ a, a:visited {
 }
 .zagrozenia {
   .card, .obrazek {
-    height: 25rem;
+    height: 30rem;
   }
   article {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     &:nth-child(even) {
       flex-direction: row-reverse;
     }
     @media screen and (max-width: $breakpoint-sm) {
       flex-direction: column !important;
+    }
+    div {
+      width: 100%;
     }
   }
   .card {
@@ -257,7 +285,7 @@ a, a:visited {
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
-    width: 50vw;
+    width: 100%;
     &.z1 { background-image: url('/assets/zagrozenia_1.jpg') }
     &.z2 { background-image: url('/assets/zagrozenia_2.jpg') }
     &.z3 { background-image: url('/assets/zagrozenia_3.jpg') }
@@ -289,10 +317,14 @@ a, a:visited {
     font-weight: 800;
     font-size: 3.5rem;
     margin: 0;
+    position: relative;
     padding: 0.4rem 1rem;
     background-color: #fff;
     text-transform: uppercase;
-    z-index: 30;
+    z-index: 30; 
+    @media screen and (max-width: $breakpoint-xs) {
+      font-size: 3rem;
+    }
   }
   &.md > h1 {
     font-size: 2.3rem;
@@ -309,10 +341,22 @@ a, a:visited {
 .card {
   width: 100%;
   border-radius: 0;
+  &:not(.unclickable) {
+    background: no-repeat url('/assets/click.svg');
+    background-position: top right;
+    background-color: #fff;
+    background-size: 3rem;
+  }
   .card-body {
     padding: 1.25rem 3rem;
+    @media screen and (max-width: $breakpoint-xs) {
+      padding: 0.5rem 2rem;
+    }
     .card-text {
       font: 1.3rem 'Open Sans', sans-serif;
+      @media screen and (max-width: $breakpoint-xs) {
+        font-size: 1rem;
+      }
     }
   }
   .overlay-content {
@@ -402,7 +446,6 @@ footer {
         transition: .2s ease-in-out color;
         &:hover {
             color: $orange;
-            text-decoration: none;
         }
     }
     h5 {
