--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -205,6 +205,7 @@ body {
     height: 70vh;
     background-color: #fff;
     padding-top: 7rem;
+    text-align: center;
     h1 {
       font: 800 3rem 'Muli', sans-serif;
       text-transform: uppercase;
@@ -223,7 +224,7 @@ body {
       }
     }
     img {
-      width: 100%;
+      height: 5rem;
     }
   }
 }
