--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -347,6 +347,10 @@ a, a:visited {
     background-position: top right;
     background-color: #fff;
     background-size: 3rem;
+    cursor: pointer;
+    .card-body {
+      text-decoration: underline;
+    }
   }
   .card-body {
     padding: 1.25rem 3rem;
