--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,12 +47,13 @@ body {
      z-index: -10;
     }
     .cc-logo {
-      width: 10rem;
+      width: 13rem;
+      height: 4rem;
       position: absolute;
       z-index: 1000;
-      top: 3rem;
-      right: 3rem;
-      background: no-repeat center/contain url('/assets/cc-logo.png');
+      top: 1rem;
+      right: 2rem;
+      background: no-repeat center/contain url('/assets/CClogo.svg');
     }
     .t1 {
       margin-top: 7vh;
@@ -109,6 +110,7 @@ body {
         right: 0;
         height: 100%;
         width: 50vw;
+        background-position: center bottom;
         margin-top: 0;
       }
     }
@@ -122,7 +124,7 @@ body {
     }
     .wyslij-email {
       position: absolute;
-      left: 10%;
+      left: 5%;
       bottom: 35%;
     }
     @media screen and (max-width: $breakpoint-sm) {
@@ -218,7 +220,7 @@ body {
     }
     .series {
       position: absolute;
-      bottom: 3rem;
+      bottom: 8rem;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -228,7 +230,7 @@ body {
         flex-direction: column;
         flex-wrap: nowrap;
         padding: 0 2rem;
-
+        bottom: 1rem;
       }
     }
     .ob {
@@ -265,6 +267,7 @@ body {
       font-size: 1rem;
     }
     img {
+      max-width: 100%;
       height: 5rem;
     }
   }
@@ -290,6 +293,9 @@ a, a:visited {
     right: 15%;
   }
   &.k2 {
+    @media screen and (max-width: $breakpoint-sm) {
+      display:none;
+    }
     bottom: -10%;
     left: 5%;
   }
