--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -509,12 +509,24 @@ a, a:visited {
   }
   .slick-next {
     &:before {
-      content: ">"
+      content: ">";
     }
   }
   .slick-prev:before, .slick-next:before {
+      font-family: sans-serif;
       color: $orange;
       font-size: 1.5rem;
+  }
+  .card .card-body {
+    a:hover {
+      text-decoration: none;
+    }
+    .card-title {
+      &:first-child {
+        margin: 0;
+      }
+      font-size: 1.5rem;
+    }
   }
 }
 footer {
